# mogi-suction

./: .cursorrules  .gitignore  Cargo.toml  Makefile  README.md  dev-cert.pem  dev-key.pem  go.mod
apps/client/: .air.toml  Cargo.toml  go.mod  go.sum  main.go  quic_client.go  quic_test.go
apps/client/packet/: action_parser.go  analyzer.go  attack_parser.go  hp_parser.go  packet_sniffer.go  parsers.go  payload_analyzer.go  sniffer.go  tcp_stream.go
apps/client/src/: main.rs
apps/server/: Cargo.toml  go.mod  go.sum  main.go  quic_server.go  server.go
apps/server/src/: main.rs
libs/shared/: Cargo.toml
libs/shared/src/: lib.rs
