[workspace]
members = [
    "apps/server",
    "apps/client",
    "libs/shared"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Mogi Suction Project"
license = "MIT"
repository = "https://github.com/yourusername/mogi-suction"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full", "net", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 