[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
pcap = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "client"
path = "src/main.rs" 