[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
shared = { path = "../../libs/shared" }
tokio = { version = "1.0", features = ["full", "net"] }
serde.workspace = true
serde_json.workspace = true 